test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-add-rule-data/04-checks.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- netpol-blue.yaml
error:
- netpol-yellow.yaml
- netpol-summer.yaml
