test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-add-rule-data/05-add-rule.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- add-rule.yaml
assert:
- policy-ready.yaml
