test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-add-rule-data/add-rule.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: existing-basic-add-rule-data
spec:
  generateExisting: true
  rules:
  - name: existing-basic-create-rule-data
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              color: blue
    generate:
      kind: NetworkPolicy
      apiVersion: networking.k8s.io/v1
      name: default-deny
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      data:
        metadata:
          labels:
            created-by: kyverno
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
  - name: existing-basic-add-rule
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              color: yellow
    generate:
      kind: NetworkPolicy
      apiVersion: networking.k8s.io/v1
      name: default-deny
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      data:
        metadata:
          labels:
            created-by: kyverno
        spec:
          podSelector: {}
          policyTypes:
          - Ingress
          - Egress
