test/conformance/kuttl/generate/clusterpolicy/standard/existing/existing-basic-add-rule-data/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: existing-basic-add-rule-data
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
